web: wrap hidden inputs in form to prevent warning

--- a/web/src/authentik.css
+++ b/web/src/authentik.css
@@ -5,7 +5,7 @@ html {
     --pf-c-nav__link--PaddingLeft: 0.5rem;
 }
 
-html > input {
+html > form > input {
     position: absolute;
     top: -2000px;
     left: -2000px;
@@ -21,6 +21,7 @@ html > input {
 /* Ensure card is displayed on small screens */
 .pf-c-login__main {
     display: block;
+    position: relative;
 }
 .ak-login-container {
     height: calc(100vh - var(--pf-global--spacer--lg) - var(--pf-global--spacer--lg));
@@ -32,11 +33,8 @@ html > input {
 .pf-c-login__header {
     flex-grow: 1;
 }
-.pf-c-login__main {
-    flex-shrink: 1;
-}
 .pf-c-login__footer {
-    flex-grow: 1;
+    flex-grow: 2;
 }
 .pf-c-login__footer ul.pf-c-list.pf-m-inline {
     justify-content: center;
